Fix spacing above answer

--- a/src/scss/_connections_and_sequences.scss
+++ b/src/scss/_connections_and_sequences.scss
@@ -56,6 +56,7 @@
   font-size: 30px;
 
   p {
+    margin: 0;
     text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.8);
   }
 }
